# ferrum-note

./: .gitignore  .gitmessage  .prettierignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  commitlint.config.cjs  package.json
.githooks/: commit-msg
.github/: pull_request_template.md
.github/workflows/: auto-prerelease.yml  ci.yml  release-build.yml
apps/desktop/: eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vitest.config.ts
apps/desktop/e2e/: desktop.spec.ts
apps/desktop/scripts/: build-engine-wasm.mjs  prepare-brand-assets.mjs
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/api/: bridge.ts
apps/desktop/src/editor/: FerrumCodeBlock.ts  MarkdownEditor.tsx  SourceEditor.tsx  WriterSurface.tsx  codeLanguage.ts  codeLanguageSupport.ts  domMapping.test.ts  domMapping.ts  inputPipeline.ts  (+13 more)
crates/fn-config/: Cargo.toml
crates/fn-config/src/: lib.rs
crates/fn-core/: Cargo.toml
crates/fn-core/src/: lib.rs
crates/fn-engine/: Cargo.toml
crates/fn-engine-wasm/: Cargo.toml
crates/fn-engine-wasm/src/: lib.rs
crates/fn-engine/src/: ast.rs  lib.rs  registry.rs  render_snapshot.rs  rope.rs  selection.rs  transaction.rs
crates/fn-export/: Cargo.toml
crates/fn-export/src/: lib.rs
crates/fn-fs/: Cargo.toml
crates/fn-fs/src/: lib.rs
crates/fn-fs/tests/: fs_tests.rs
docs/: architecture.md  engine-architecture.md  git-convention.md  known-limitations.md  mvp-scope.md  release-guide.md  wsl-troubleshooting.md
scripts/: setup-git-hooks.sh
(+16 files in other folders)
